# pico-flight-computer

./: CMakeLists.txt  README.md
docs/: LEARNING_RESOURCES.md
src/: CMakeLists.txt  main.c
